Problem 1: first complete attempt

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "3f7b4ea5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yfinance as yf"
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "import csv"
    ]
   },
   {
@@ -15,12 +17,20 @@
    "id": "b1a4a31f",
    "metadata": {},
    "source": [
-    "## Problem 1: Date from yfinance\n"
+    "## Problem 1: Date from yfinance\n",
+    "\n",
+    "In the code cell below I create a function called get_data(). The core purpose of this function is to quickly download and process data for the 5 FAANG stocks for the past 5 days.\n",
+    "\n",
+    "A problem I ran improper indexing. When I first tried to convert the data to csv format, only two columns were converted. I researched multi indexing so that I could have the 'Close', 'Open', 'Volume' headings as index objects above each of the stocks, to improve readability and also to instuct python to properly convert the data frame into a readable csv file.\n",
+    "\n",
+    "multi indexing reference: https://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "d2c097fa",
    "metadata": {},
    "outputs": [
@@ -28,31 +38,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fmtie\\AppData\\Local\\Temp\\ipykernel_23528\\1838444290.py:4: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  data = yf.download(faang_tickers, period='5mo')\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Tickers' object has no attribute 'replace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# writing a function called get_data() to fetch data from the past 5 days for the FAANG stocks\u001b[39;00m\n\u001b[0;32m      3\u001b[0m faang_tickers \u001b[38;5;241m=\u001b[39m yf\u001b[38;5;241m.\u001b[39mTickers(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmeta aapl amzn nflx goog\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# reference: https://ranaroussi.github.io/yfinance/reference/yfinance.ticker_tickers.html\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m data \u001b[38;5;241m=\u001b[39m yf\u001b[38;5;241m.\u001b[39mdownload(faang_tickers, period\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m5mo\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(data)\n",
-      "File \u001b[1;32mc:\\Users\\fmtie\\anaconda3\\Lib\\site-packages\\yfinance\\utils.py:92\u001b[0m, in \u001b[0;36mlog_indent_decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     89\u001b[0m logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEntering \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m()\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     91\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m IndentationContext():\n\u001b[1;32m---> 92\u001b[0m     result \u001b[38;5;241m=\u001b[39m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m     94\u001b[0m logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExiting \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m()\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     95\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "File \u001b[1;32mc:\\Users\\fmtie\\anaconda3\\Lib\\site-packages\\yfinance\\multi.py:130\u001b[0m, in \u001b[0;36mdownload\u001b[1;34m(tickers, start, end, actions, threads, ignore_tz, group_by, auto_adjust, back_adjust, repair, keepna, progress, period, interval, prepost, proxy, rounding, timeout, session, multi_level_index)\u001b[0m\n\u001b[0;32m    126\u001b[0m         ignore_tz \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    128\u001b[0m \u001b[38;5;66;03m# create ticker list\u001b[39;00m\n\u001b[0;32m    129\u001b[0m tickers \u001b[38;5;241m=\u001b[39m tickers \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\n\u001b[1;32m--> 130\u001b[0m     tickers, (\u001b[38;5;28mlist\u001b[39m, \u001b[38;5;28mset\u001b[39m, \u001b[38;5;28mtuple\u001b[39m)) \u001b[38;5;28;01melse\u001b[39;00m tickers\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msplit()\n\u001b[0;32m    132\u001b[0m \u001b[38;5;66;03m# accept isin as ticker\u001b[39;00m\n\u001b[0;32m    133\u001b[0m shared\u001b[38;5;241m.\u001b[39m_ISINS \u001b[38;5;241m=\u001b[39m {}\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Tickers' object has no attribute 'replace'"
+      "C:\\Users\\fmtie\\AppData\\Local\\Temp\\ipykernel_27824\\626179919.py:5: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  faang_stock_data_past_5_days = yf.download('meta aapl amzn nflx goog', period=\"5d\") # reference: https://ranaroussi.github.io/yfinance/reference/yfinance.ticker_tickers.html\n",
+      "[*********************100%***********************]  5 of 5 completed\n"
      ]
     }
    ],
    "source": [
     "# writing a function called get_data() to fetch data from the past 5 days for the FAANG stocks\n",
     "\n",
-    "faang_tickers = yf.Tickers('meta aapl amzn nflx goog') # reference: https://ranaroussi.github.io/yfinance/reference/yfinance.ticker_tickers.html\n",
-    "data = yf.download(faang_tickers, period='5mo')\n",
-    "print(data)\n"
+    "def get_data():\n",
+    "    file_path = r'C:\\Users\\fmtie\\OneDrive\\Desktop\\comp-infrastructure\\data\\five_day_faang_data.csv'\n",
+    "    faang_stock_data_past_5_days = yf.download('meta aapl amzn nflx goog', period=\"5d\") # reference: https://ranaroussi.github.io/yfinance/reference/yfinance.ticker_tickers.html\n",
+    "    faang_stock_data_frame = pd.DataFrame(faang_stock_data_past_5_days)\n",
+    "    pd.MultiIndex.from_frame(faang_stock_data_frame)\n",
+    "    faang_stock_data_frame.to_csv(file_path)\n",
+    "\n",
+    "\n",
+    "\n",
+    "get_data()\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b0c23ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
