completion of problem 1 in problems.ipynb

--- a/assignment/problems.ipynb
+++ b/assignment/problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "3f7b4ea5",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "d2c097fa",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fmtie\\AppData\\Local\\Temp\\ipykernel_27824\\626179919.py:5: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "C:\\Users\\fmtie\\AppData\\Local\\Temp\\ipykernel_37640\\1077228276.py:6: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  faang_stock_data_past_5_days = yf.download('meta aapl amzn nflx goog', period=\"5d\") # reference: https://ranaroussi.github.io/yfinance/reference/yfinance.ticker_tickers.html\n",
       "[*********************100%***********************]  5 of 5 completed\n"
      ]
@@ -48,13 +48,12 @@
     "# writing a function called get_data() to fetch data from the past 5 days for the FAANG stocks\n",
     "\n",
     "def get_data():\n",
-    "    file_path = r'C:\\Users\\fmtie\\OneDrive\\Desktop\\comp-infrastructure\\data\\five_day_faang_data.csv'\n",
+    "    current_date_time = pd.Timestamp.now().strftime('%Y%m%d-%H%M%S') #reference: https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior\n",
+    "    file_path = f'C:/Users/fmtie/OneDrive/Desktop/comp-infrastructure/data/{current_date_time}.csv'\n",
     "    faang_stock_data_past_5_days = yf.download('meta aapl amzn nflx goog', period=\"5d\") # reference: https://ranaroussi.github.io/yfinance/reference/yfinance.ticker_tickers.html\n",
     "    faang_stock_data_frame = pd.DataFrame(faang_stock_data_past_5_days)\n",
     "    pd.MultiIndex.from_frame(faang_stock_data_frame)\n",
     "    faang_stock_data_frame.to_csv(file_path)\n",
-    "\n",
-    "\n",
     "\n",
     "get_data()\n",
     "\n",
