Initial work on problem 2

--- a/assignment/problems.ipynb
+++ b/assignment/problems.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3f7b4ea5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
-    "import csv"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -30,20 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d2c097fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fmtie\\AppData\\Local\\Temp\\ipykernel_37640\\1077228276.py:6: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  faang_stock_data_past_5_days = yf.download('meta aapl amzn nflx goog', period=\"5d\") # reference: https://ranaroussi.github.io/yfinance/reference/yfinance.ticker_tickers.html\n",
-      "[*********************100%***********************]  5 of 5 completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# writing a function called get_data() to fetch data from the past 5 days for the FAANG stocks\n",
     "\n",
@@ -55,15 +45,50 @@
     "    pd.MultiIndex.from_frame(faang_stock_data_frame)\n",
     "    faang_stock_data_frame.to_csv(file_path)\n",
     "\n",
-    "get_data()\n",
+    "    return file_path\n",
     "\n",
-    "\n"
+    "# this runs the function, while also storing the file path used which I need for my next function\n",
+    "file_path = get_data()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b0c23ee",
+   "metadata": {},
+   "source": [
+    "## Problem 2 Plotting Data\n",
+    "Below I attempt to begin plotting the data stored in the .csv file I have just created. I refer to Wes McKinney's book 'Python for Data Analysis' chapter 9 to create a figure with 4 sub plots to allow me to create the prescribed close prices plot, as well as other plots I think might be useful."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b0c23ee",
+   "id": "e27f2ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(file_path)\n",
+    "#print(df)\n",
+    "pd.MultiIndex.from_frame(df)\n",
+    "print(df[2, 3])\n",
+    "\n",
+    "\n",
+    "def plot_data():\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    fig = plt.figure()\n",
+    "    ax1 = fig.add_subplot(2, 2, 1)\n",
+    "    ax2 = fig.add_subplot(2, 2, 2)\n",
+    "    ax3 = fig.add_subplot(2, 2, 3)\n",
+    "    ax4 = fig.add_subplot(2, 2, 4)\n",
+    "    ax1.plot(df['Close']), ax1.set_title('Close Prices'), ax1.set_xlabel('Date'), ax1.set_ylabel('Price ($)')\n",
+    "\n",
+    "#plot_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2a28cdc",
    "metadata": {},
    "outputs": [],
    "source": []
